Update to fix double border on code

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,13 +1,10 @@
 
 .highlight {
-  background-color: #efefef;
+  background-color: #e8eaef;
   padding: 7px 7px 7px 10px;
-  border: 1px solid #ddd;
-  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  box-shadow: 3px 3px rgba(0,0,0,0.1);
-  margin: 20px 0 20px 0;
-  overflow: scroll;
+  margin: 10px 0 10px 0;
+  overflow: auto;
+  font-weight: 800;
 }
 
 code {
